tests/render_types/render_types.exp
Error ---------------------------------------------------------------------------------------------------- import.js:5:2

Cannot cast `x` to renders `Bar` because `Foo` [1] does not render `Bar` [2]. [incompatible-cast]

   import.js:5:2
   5| (x: $Renders<Bar>); // ERROR
       ^ [1]

References:
   import.js:5:5
   5| (x: $Renders<Bar>); // ERROR
          ^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:20:4

Cannot cast `rendersFooOrBar` to `typeof rendersFooOrRendersBar` because: [incompatible-cast]
 - Either `Bar` [1] does not render `Foo` [2].
 - Or `Foo` [1] does not render `Bar` [3].

   renders_to_renders.js:20:4
   20|   (rendersFooOrBar: typeof rendersFooOrRendersBar); // ERROR
          ^^^^^^^^^^^^^^^ [1]

References:
   renders_to_renders.js:12:39
   12| declare const rendersFooOrRendersBar: $Renders<Foo> | $Renders<Bar>;
                                             ^^^^^^^^^^^^^ [2]
   renders_to_renders.js:12:55
   12| declare const rendersFooOrRendersBar: $Renders<Foo> | $Renders<Bar>;
                                                             ^^^^^^^^^^^^^ [3]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:28:4

Cannot cast `rendersFoo` to renders `Bar` because `Foo` [1] does not render `Bar` [2]. [incompatible-cast]

   renders_to_renders.js:28:4
   28|   (rendersFoo: $Renders<Bar>); // ERROR
          ^^^^^^^^^^ [1]

References:
   renders_to_renders.js:28:16
   28|   (rendersFoo: $Renders<Bar>); // ERROR
                      ^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:29:4

Cannot cast `rendersFoo` to renders `React.Element` because `Foo` [1] does not render `React.Element` [2].
[incompatible-cast]

   renders_to_renders.js:29:4
   29|   (rendersFoo: $Renders<React$Element<Bar>>); // ERROR
          ^^^^^^^^^^ [1]

References:
   renders_to_renders.js:29:16
   29|   (rendersFoo: $Renders<React$Element<Bar>>); // ERROR
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:34:4

Cannot cast `rendersFoo` to renders renders `Bar` because `Foo` [1] does not render `Bar` [2]. [incompatible-cast]

   renders_to_renders.js:34:4
   34|   (rendersFoo: $Renders<$Renders<Bar>>); // ERROR
          ^^^^^^^^^^ [1]

References:
   renders_to_renders.js:34:16
   34|   (rendersFoo: $Renders<$Renders<Bar>>); // ERROR
                      ^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:35:4

Cannot cast `rendersFoo` to renders renders `React.Element` because `Foo` [1] does not render `React.Element` [2].
[incompatible-cast]

   renders_to_renders.js:35:4
   35|   (rendersFoo: $Renders<$Renders<React$Element<Bar>>>); // ERROR
          ^^^^^^^^^^ [1]

References:
   renders_to_renders.js:35:16
   35|   (rendersFoo: $Renders<$Renders<React$Element<Bar>>>); // ERROR
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:46:4

Cannot cast `rendersQux` to renders union type because: [incompatible-cast]
 - Either `Qux` [1] does not render `Foo` [2].
 - Or `Qux` [1] does not render `Baz` [3].

   renders_to_renders.js:46:4
   46|   (rendersQux: $Renders<Foo | Baz>); // ERROR
          ^^^^^^^^^^ [1]

References:
   renders_to_renders.js:46:25
   46|   (rendersQux: $Renders<Foo | Baz>); // ERROR
                               ^^^ [2]
   renders_to_renders.js:46:31
   46|   (rendersQux: $Renders<Foo | Baz>); // ERROR
                                     ^^^ [3]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:58:4

Cannot cast `rendersBazOrBaz` to renders `Bar` because `Baz` [1] does not render `Bar` [2]. [incompatible-cast]

   renders_to_renders.js:58:4
   58|   (rendersBazOrBaz: $Renders<Bar>); // ERROR
          ^^^^^^^^^^^^^^^ [1]

References:
   renders_to_renders.js:58:21
   58|   (rendersBazOrBaz: $Renders<Bar>); // ERROR
                           ^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:66:4

Cannot cast `rendersFooOrBar` to renders union type because: [incompatible-cast]
 - Either `Bar` [1] does not render `Foo` [2].
 - Or `Bar` [1] does not render `Baz` [3].

   renders_to_renders.js:66:4
   66|   (rendersFooOrBar: $Renders<Foo | Baz>); // ERROR
          ^^^^^^^^^^^^^^^ [1]

References:
   renders_to_renders.js:66:30
   66|   (rendersFooOrBar: $Renders<Foo | Baz>); // ERROR
                                    ^^^ [2]
   renders_to_renders.js:66:36
   66|   (rendersFooOrBar: $Renders<Foo | Baz>); // ERROR
                                          ^^^ [3]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:72:4

Cannot cast `Foo` to renders `Foo` because component Foo [1] does not render `Foo` [2]. [incompatible-cast]

   renders_to_renders.js:72:4
   72|   (Foo: $Renders<Foo>); // ERROR
          ^^^

References:
   renders_to_renders.js:2:1
    2| component Foo() renders $Renders<null> { return null }
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   renders_to_renders.js:72:9
   72|   (Foo: $Renders<Foo>); // ERROR
               ^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:81:4

Cannot cast `rendersFooOrBar` to empty because `React.Element` [1] is incompatible with empty [2]. [incompatible-cast]

   renders_to_renders.js:81:4
   81|   (rendersFooOrBar: empty); // ERROR
          ^^^^^^^^^^^^^^^

References:
   renders_to_renders.js:11:41
   11| declare const rendersFooOrBar: $Renders<Foo | Bar>;
                                               ^^^^^^^^^ [1]
   renders_to_renders.js:81:21
   81|   (rendersFooOrBar: empty); // ERROR
                           ^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:84:4

Cannot cast `rendersNode` to `React.MixedElement` because `React.Portal` [1] is incompatible with `React.Element` [2].
[incompatible-cast]

   renders_to_renders.js:84:4
   84|   (rendersNode: React$MixedElement); // ERROR
          ^^^^^^^^^^^

References:
   renders_to_renders.js:10:37
   10| declare const rendersNode: $Renders<React$Node>;
                                           ^^^^^^^^^^ [1]
   renders_to_renders.js:84:17
   84|   (rendersNode: React$MixedElement); // ERROR
                       ^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:84:4

Cannot cast `rendersNode` to `React.MixedElement` because boolean [1] is incompatible with `React.Element` [2].
[incompatible-cast]

   renders_to_renders.js:84:4
   84|   (rendersNode: React$MixedElement); // ERROR
          ^^^^^^^^^^^

References:
   renders_to_renders.js:10:37
   10| declare const rendersNode: $Renders<React$Node>;
                                           ^^^^^^^^^^ [1]
   renders_to_renders.js:84:17
   84|   (rendersNode: React$MixedElement); // ERROR
                       ^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:84:4

Cannot cast `rendersNode` to `React.MixedElement` because null [1] is incompatible with `React.Element` [2].
[incompatible-cast]

   renders_to_renders.js:84:4
   84|   (rendersNode: React$MixedElement); // ERROR
          ^^^^^^^^^^^

References:
   renders_to_renders.js:10:37
   10| declare const rendersNode: $Renders<React$Node>;
                                           ^^^^^^^^^^ [1]
   renders_to_renders.js:84:17
   84|   (rendersNode: React$MixedElement); // ERROR
                       ^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:84:4

Cannot cast `rendersNode` to `React.MixedElement` because number [1] is incompatible with `React.Element` [2].
[incompatible-cast]

   renders_to_renders.js:84:4
   84|   (rendersNode: React$MixedElement); // ERROR
          ^^^^^^^^^^^

References:
   renders_to_renders.js:10:37
   10| declare const rendersNode: $Renders<React$Node>;
                                           ^^^^^^^^^^ [1]
   renders_to_renders.js:84:17
   84|   (rendersNode: React$MixedElement); // ERROR
                       ^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:84:4

Cannot cast `rendersNode` to `React.MixedElement` because string [1] is incompatible with `React.Element` [2].
[incompatible-cast]

   renders_to_renders.js:84:4
   84|   (rendersNode: React$MixedElement); // ERROR
          ^^^^^^^^^^^

References:
   renders_to_renders.js:10:37
   10| declare const rendersNode: $Renders<React$Node>;
                                           ^^^^^^^^^^ [1]
   renders_to_renders.js:84:17
   84|   (rendersNode: React$MixedElement); // ERROR
                       ^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:84:4

Cannot cast `rendersNode` to `React.MixedElement` because undefined [1] is incompatible with `React.Element` [2].
[incompatible-cast]

   renders_to_renders.js:84:4
   84|   (rendersNode: React$MixedElement); // ERROR
          ^^^^^^^^^^^

References:
   renders_to_renders.js:10:37
   10| declare const rendersNode: $Renders<React$Node>;
                                           ^^^^^^^^^^ [1]
   renders_to_renders.js:84:17
   84|   (rendersNode: React$MixedElement); // ERROR
                       ^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:84:4

Cannot cast `rendersNode` to `React.MixedElement` because inexact `$Iterable` [1] is incompatible with exact
`React.Element` [2]. [incompatible-exact]

   renders_to_renders.js:84:4
   84|   (rendersNode: React$MixedElement); // ERROR
          ^^^^^^^^^^^

References:
   renders_to_renders.js:10:37
   10| declare const rendersNode: $Renders<React$Node>;
                                           ^^^^^^^^^^ [1]
   renders_to_renders.js:84:17
   84|   (rendersNode: React$MixedElement); // ERROR
                       ^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:87:4

Cannot cast `rendersNullOrNull` to null because `$Iterable` [1] is incompatible with null [2]. [incompatible-cast]

   renders_to_renders.js:87:4
   87|   (rendersNullOrNull: null); // ERROR
          ^^^^^^^^^^^^^^^^^

References:
   renders_to_renders.js:86:45
   86|   declare const rendersNullOrNull: $Renders<null | null>;
                                                   ^^^^^^^^^^^ [1]
   renders_to_renders.js:87:23
   87|   (rendersNullOrNull: null); // ERROR
                             ^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:87:4

Cannot cast `rendersNullOrNull` to null because `React.Element` [1] is incompatible with null [2]. [incompatible-cast]

   renders_to_renders.js:87:4
   87|   (rendersNullOrNull: null); // ERROR
          ^^^^^^^^^^^^^^^^^

References:
   renders_to_renders.js:86:45
   86|   declare const rendersNullOrNull: $Renders<null | null>;
                                                   ^^^^^^^^^^^ [1]
   renders_to_renders.js:87:23
   87|   (rendersNullOrNull: null); // ERROR
                             ^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:87:4

Cannot cast `rendersNullOrNull` to null because `React.Portal` [1] is incompatible with null [2]. [incompatible-cast]

   renders_to_renders.js:87:4
   87|   (rendersNullOrNull: null); // ERROR
          ^^^^^^^^^^^^^^^^^

References:
   renders_to_renders.js:86:45
   86|   declare const rendersNullOrNull: $Renders<null | null>;
                                                   ^^^^^^^^^^^ [1]
   renders_to_renders.js:87:23
   87|   (rendersNullOrNull: null); // ERROR
                             ^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:87:4

Cannot cast `rendersNullOrNull` to null because boolean [1] is incompatible with null [2]. [incompatible-cast]

   renders_to_renders.js:87:4
   87|   (rendersNullOrNull: null); // ERROR
          ^^^^^^^^^^^^^^^^^

References:
   renders_to_renders.js:86:45
   86|   declare const rendersNullOrNull: $Renders<null | null>;
                                                   ^^^^^^^^^^^ [1]
   renders_to_renders.js:87:23
   87|   (rendersNullOrNull: null); // ERROR
                             ^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:87:4

Cannot cast `rendersNullOrNull` to null because number [1] is incompatible with null [2]. [incompatible-cast]

   renders_to_renders.js:87:4
   87|   (rendersNullOrNull: null); // ERROR
          ^^^^^^^^^^^^^^^^^

References:
   renders_to_renders.js:86:45
   86|   declare const rendersNullOrNull: $Renders<null | null>;
                                                   ^^^^^^^^^^^ [1]
   renders_to_renders.js:87:23
   87|   (rendersNullOrNull: null); // ERROR
                             ^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:87:4

Cannot cast `rendersNullOrNull` to null because string [1] is incompatible with null [2]. [incompatible-cast]

   renders_to_renders.js:87:4
   87|   (rendersNullOrNull: null); // ERROR
          ^^^^^^^^^^^^^^^^^

References:
   renders_to_renders.js:86:45
   86|   declare const rendersNullOrNull: $Renders<null | null>;
                                                   ^^^^^^^^^^^ [1]
   renders_to_renders.js:87:23
   87|   (rendersNullOrNull: null); // ERROR
                             ^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:87:4

Cannot cast `rendersNullOrNull` to null because undefined [1] is incompatible with null [2]. [incompatible-cast]

   renders_to_renders.js:87:4
   87|   (rendersNullOrNull: null); // ERROR
          ^^^^^^^^^^^^^^^^^

References:
   renders_to_renders.js:86:45
   86|   declare const rendersNullOrNull: $Renders<null | null>;
                                                   ^^^^^^^^^^^ [1]
   renders_to_renders.js:87:23
   87|   (rendersNullOrNull: null); // ERROR
                             ^^^^ [2]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:89:15

Cannot get `rendersNode.props` because property `props` is missing in `$Iterable` [1]. [prop-missing]

   renders_to_renders.js:89:15
   89|   rendersNode.props; // ERROR
                     ^^^^^

References:
   renders_to_renders.js:10:37
   10| declare const rendersNode: $Renders<React$Node>;
                                           ^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:89:15

Cannot get `rendersNode.props` because property `props` is missing in `Boolean` [1]. [prop-missing]

   renders_to_renders.js:89:15
   89|   rendersNode.props; // ERROR
                     ^^^^^

References:
   renders_to_renders.js:10:37
   10| declare const rendersNode: $Renders<React$Node>;
                                           ^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:89:15

Cannot get `rendersNode.props` because property `props` is missing in `Number` [1]. [prop-missing]

   renders_to_renders.js:89:15
   89|   rendersNode.props; // ERROR
                     ^^^^^

References:
   renders_to_renders.js:10:37
   10| declare const rendersNode: $Renders<React$Node>;
                                           ^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:89:15

Cannot get `rendersNode.props` because property `props` is missing in `React.Portal` [1]. [incompatible-use]

   renders_to_renders.js:89:15
   89|   rendersNode.props; // ERROR
                     ^^^^^

References:
   renders_to_renders.js:10:37
   10| declare const rendersNode: $Renders<React$Node>;
                                           ^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:89:15

Cannot get `rendersNode.props` because property `props` is missing in `String` [1]. [prop-missing]

   renders_to_renders.js:89:15
   89|   rendersNode.props; // ERROR
                     ^^^^^

References:
   renders_to_renders.js:10:37
   10| declare const rendersNode: $Renders<React$Node>;
                                           ^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:89:15

Cannot get `rendersNode.props` because property `props` is missing in null [1]. [incompatible-use]

   renders_to_renders.js:89:15
   89|   rendersNode.props; // ERROR
                     ^^^^^

References:
   renders_to_renders.js:10:37
   10| declare const rendersNode: $Renders<React$Node>;
                                           ^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:89:15

Cannot get `rendersNode.props` because property `props` is missing in undefined [1]. [incompatible-use]

   renders_to_renders.js:89:15
   89|   rendersNode.props; // ERROR
                     ^^^^^

References:
   renders_to_renders.js:10:37
   10| declare const rendersNode: $Renders<React$Node>;
                                           ^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:95:4

Cannot cast `rendersBaz` to empty because `React.Element` [1] is incompatible with empty [2]. [incompatible-cast]

   renders_to_renders.js:95:4
    95|   (rendersBaz: empty); // ERROR
           ^^^^^^^^^^

References:
   <BUILTINS>/react.js:162:35
   162| declare type React$MixedElement = React$Element<React$ElementType>;
                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   renders_to_renders.js:95:16
    95|   (rendersBaz: empty); // ERROR
                       ^^^^^ [2]


Error ----------------------------------------------------------------------------------- validate_instantiation.js:2:19

Cannot use object type [1] as a render type because: [incompatible-type]
 - Either property `key` is missing in object type [1] but exists in `React.Element` [2].
 - Or object type [1] is incompatible with `React.Portal` [3].
 - Or property `@@iterator` is missing in object type [1] but exists in `$Iterable` [4].

Render types must be a subtype of `React.Node` or a reference to a component-syntax component.

   validate_instantiation.js:2:19
    2| type Y = $Renders<{}>; // ERROR
                         ^^ [1]

References:
   <BUILTINS>/react.js:21:5
   21|   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:22:5
   22|   | React$Portal
           ^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:23:5
   23|   | Iterable<?React$Node>;
           ^^^^^^^^^^^^^^^^^^^^^ [4]



Found 34 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
